[package]
name = "rpiet"
version = "0.1.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
edition = "2018"

description = "An interpreter for Piet, the esoteric programming language"
documentation = "https://github.com/tessi/rpiet/"
homepage = "https://github.com/tessi/rpiet/"
repository = "https://github.com/tessi/rpiet/"

license = "MIT"

[dependencies]
clap = "~2.33.0"
png = "~0.15.0"