[package]
name = "rpiet"
version = "0.3.0"
authors = ["Philipp Tessenow <philipp@tessenow.org>"]
edition = "2018"

description = "An interpreter for Piet, the esoteric programming language"
documentation = "https://github.com/tessi/rpiet/"
homepage = "https://github.com/tessi/rpiet/"
repository = "https://github.com/tessi/rpiet/"
readme="README.md"
categories = ["development-tools"]
keywords = ["piet", "interpreter", "programming", "esoteric"]
maintenance = { status = "experimental" }

license = "MIT"

[dependencies]
clap = "~3.2.12"
png = "~0.16.8"
gif = "~0.10.3"